--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="numBg">#D7D3CB</color>
+    <color name="numBg">#EBE7E4</color>
     <color name="clrTextColorLight">#EEDFDF</color>
     <color name="clrBgColorLight">#F16B6B</color>
     <color name="clrTextColor">#EEDFDF</color>
