--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.9"
+            android:gravity="center_vertical|end"
             android:paddingStart="10dp"
             android:paddingTop="15dp"
             android:paddingEnd="10dp"
@@ -40,7 +41,7 @@
             android:id="@+id/tv_results"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textAlignment="viewEnd"
