--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,45 +8,11 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/lv_textviews"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_calculations"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end"
-            android:paddingStart="10dp"
-            android:paddingTop="15dp"
-            android:paddingEnd="10dp"
-            android:textAlignment="viewEnd"
-            android:textSize="34sp" />
-
-        <TextView
-            android:id="@+id/tv_hints"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textAlignment="viewEnd"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/tv_results"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textAlignment="viewEnd"
-            android:textSize="34sp" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_weight="2"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
