--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -8,49 +8,11 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/lv_textviews"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3.5"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_calculations"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.9"
-            android:gravity="center_vertical|end"
-            android:paddingStart="10dp"
-            android:paddingTop="15dp"
-            android:textColor="@color/textColorN"
-            android:paddingEnd="10dp"
-            android:textAlignment="viewEnd"
-            android:textSize="34sp" />
-
-        <TextView
-            android:id="@+id/tv_hints"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".9"
-            android:paddingStart="10dp"
-            android:textColorHint="@color/textColorN"
-            android:paddingEnd="10dp"
-            android:textAlignment="viewEnd"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/tv_results"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.3"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textColor="@color/textColorN"
-            android:textAlignment="viewEnd"
-            android:textSize="34sp" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
+        android:layout_weight="3.5"/>
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="0dp"
